Changed -Og -g to -O3

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC=gcc
-override CFLAGS+=-lm -Wall -Wextra -pedantic --std=gnu11 -Og -g `sdl-config --libs` -lSDL -fopenmp
+override CFLAGS+=-lm -Wall -Wextra -pedantic --std=gnu11 -O3 `sdl-config --libs` -lSDL -fopenmp
 SOURCES=main.c utils.c disassembler.c emulator.c graphics.c
 EXECUTABLE=main
 
