Reworked make test

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,23 +15,28 @@ SOURCES=utils.c                      \
 		interrupts.c                 \
 		instructions_stack_io_control.c
 
+ROM_PATH=roms/cpu_instrs/individual/
 SOURCE_BIN=main.c
 EXECUTABLE=main
 
-SOURCE_TEST=main_test.c
-EXECUTABLE_TEST=main_test
-
-
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_BIN=$(SOURCE_BIN:.c=.o)
-OBJECTS_TEST=$(SOURCE_TEST:.c=.o)
 
 all: $(SOURCES) $(SOURCE_BIN) $(EXECUTABLE)
-test: $(SOURCES) $(SOURCE_TEST) $(EXECUTABLE_TEST)
 
-$(EXECUTABLE_TEST): $(OBJECTS) $(OBJECTS_TEST)
-	$(CC) $(CFLAGS) $(OBJECTS) $(OBJECTS_TEST) -o $@
-	./$(EXECUTABLE_TEST)
+test: $(EXECUTABLE)
+	./$(EXECUTABLE) $(ROM_PATH)/"01-special.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"02-interrupts.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"03-op sp,hl.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"04-op r,imm.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"05-op rp.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"06-ld r,r.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"07-jr,jp,call,ret,rst.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"08-misc instrs.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"09-op r,r.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"10-bit ops.gb"
+	./$(EXECUTABLE) $(ROM_PATH)/"11-op a,(hl).gb"
+
 
 $(EXECUTABLE): $(OBJECTS) $(OBJECTS_BIN)
 	$(CC) $(CFLAGS) $(OBJECTS) $(OBJECTS_BIN) -o $@
@@ -41,4 +46,4 @@ $(EXECUTABLE): $(OBJECTS) $(OBJECTS_BIN)
 
 .PHONY: clean
 clean:
-	$(RM) $(OBJECTS_BIN) $(OBJECTS_TEST) $(OBJECTS) $(EXECUTABLE_TEST) $(EXECUTABLE)
+	$(RM) $(OBJECTS_BIN) $(OBJECTS) $(EXECUTABLE)
