--- a/src/Makefile
+++ b/src/Makefile
@@ -12,7 +12,7 @@ SOURCES=utils.c                      \
 		instructions_logical.c       \
 		instructions_arithmetic.c    \
 		instructions_0xcb.c          \
-		halfcary.c                   \
+		halfcarry.c                   \
 		interrupts.c                 \
 		instructions_stack_io_control.c
 
