Updated to SDL2

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 CC=gcc
-override CFLAGS+=-lm -Wall -Wextra -pedantic --std=gnu11 -O3 `sdl-config --libs` -lSDL -fopenmp
+override CFLAGS+=-lm -Wall -Wextra -pedantic --std=gnu11 -O3 `sdl2-config --cflags --libs`
+
 SOURCES=utils.c                      \
 		disassembler.c               \
 		decoder.c                    \
