Added a small microcode file to starting refactoring the instructions to use it (and get more accurate timewise)

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,7 @@ SOURCES=utils.c                      \
 		decoder.c                    \
 		graphics.c                   \
 		time_keeper.c                \
+		microcode.c                  \
 		memory.c                     \
 		cartridge.c                  \
 		display.c                    \
