The main skel for the APU

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,7 +18,8 @@ SOURCES=utils.c                      \
 		instructions_logical.c       \
 		instructions_arithmetic.c    \
 		instructions_0xcb.c          \
-		halfcarry.c                   \
+		halfcarry.c                  \
+		audio.c                      \
 		interrupts.c                 \
 		instructions_stack_io_control.c
 
