Wrote a small and simple overlay structure to be used in the future - cherrypick

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,6 +26,7 @@ SOURCES=utils.c                      \
 		instructions_0xcb.c          \
 		halfcarry.c                  \
 		feature_functions.c          \
+		overlay.c                    \
 		interrupts.c                 \
 		instructions_stack_io_control.c
 
